# interview-coach

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile.api  Dockerfile.ui  Makefile  README.md  _ci_gate_throwaway.py  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_users.py  0002_documents.py  0003_jobs.py  0004_profiles.py  0005_company_snapshots.py  0006_sessions_and_turns.py  0007_grounding_chunks.py  0008_phase14_1_document_mappings.py  0009_llm_calls.py  0010_phase22_content_hash.py  0011_phase24_hybrid_fts.py  0012_phase25_last_embed_attempt_at.py
docs/adr/: 0001-prep-event-protocol.md  0002-routing-stays-edge-defined.md  0003-merge-through-prs-not-fast-forward.md
docs/agents/: domain.md  triage-labels.md
frontend/: nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.test.ts  api.ts  errors.ts  jobLabel.ts  main.tsx  styles.css
frontend/src/components/: ActiveJobChip.tsx  AppShell.tsx  ArmedDeleteButton.tsx  DocMappingModal.tsx  LoadingStatus.tsx  MappingModal.tsx  MappingPanel.tsx  ui.tsx
frontend/src/hooks/: useStreamAbort.ts
frontend/src/pages/: HistoryPage.tsx  InterviewPage.tsx  LoginPage.tsx  ManagePage.tsx  SetupPage.tsx
frontend/src/pages/__tests__/: nodeReasonLabel.test.ts
frontend/src/state/: activeJob.tsx  auth.tsx
plan/: master.md
scripts/: backfill_grounding.py  mcp_smoke.py
services/embedder/: Dockerfile  README.md  pyproject.toml
services/embedder/embedder/: __init__.py  main.py  schemas.py
services/embedder/tests/: test_app.py  test_app_unit.py  test_parity.py
src/interview_coach/: config.py
src/interview_coach/agents/: graph.py  graph_nodes.py  prep_cache.py  prep_events.py  profile_view.py  prompts.py  schemas.py  state.py  streaming_json.py
src/interview_coach/api/: errors.py  main.py  streaming.py
src/interview_coach/db/: __init__.py  models.py  repos.py  session.py
src/interview_coach/ingestion/: __init__.py  docx.py  errors.py  pdf.py  web.py
src/interview_coach/llm/: __init__.py  client.py  ollama.py  telemetry.py
src/interview_coach/mcp/: client.py
src/interview_coach/observability/: langfuse.py
src/interview_coach/providers/: base.py  registry.py  tavily.py
src/interview_coach/rag/: __init__.py  chunking.py  client.py  concurrency.py  embeddings.py  hybrid.py  ingest.py  model_identity.py  model_lock.py  retrieval.py  tokenizer.py
tests/: conftest.py  test_agents_company_researcher.py  test_agents_evaluator.py  test_agents_graph.py  test_agents_integration.py  test_agents_job_analyzer.py  test_agents_profile_builder.py  test_agents_question_generator.py  test_auth.py  test_documents_api.py  test_documents_phase18.py  test_documents_phase22.py  test_embedder_failure_modes.py  test_embedding_client.py  test_eval_local_llm.py  test_focus_picker.py  test_healthz.py  test_ingestion.py  test_jobs_api.py  test_jobs_phase18.py  test_jobs_phase22.py  test_llm.py  test_llm_ollama.py  test_llm_structured_retry.py  test_llm_telemetry.py  test_mcp_documents_server.py  test_mcp_web_server.py  test_model_identity.py  test_observability.py  test_phase21_prep_graph.py  test_phase22_account_reset.py  test_phase22_blocking_sessions.py  test_phase22_company_research_degrade.py  test_phase25_apply_mapping_awaits_embed.py  test_phase25_embedding_status_retry.py  test_phase25_prep_in_progress.py  test_phase25_profile_builder_cache.py  test_prep_cache.py  test_prep_events.py  test_prep_node_glue.py  (+7 more)
tests/integration/: test_mcp_documents_resources.py
tests/integration/eval/: conftest.py  local_llm.py  metrics.py  report.py  retrieval_recall_results.csv  test_model_answer_quality.py  test_question_quality.py  test_retrieval_recall.py
ui/: api_client.py  app.py  state.py
ui/pages/: History.py  Interview.py  Setup.py
(+43 files in other folders)
