[project]
name = "interview-coach"
version = "0.1.0"
description = "Personalized AI interview practice — LangGraph + FastAPI + Streamlit + Ollama"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "langgraph==1.1.0",
    "langgraph-checkpoint-sqlite==3.0.3",
    "langchain-core==1.0.0",
    "langchain-ollama==1.0.0",
    "mcp==1.26.0",
    "a2a-sdk==0.3.25",
    "langfuse==4.0.1",
    "deepeval==3.9.1",
    "litellm==1.82.4",
    "openai==2.8.0",
    "httpx==0.28.1",
    "fastapi==0.115.0",
    "uvicorn==0.34.0",
    "streamlit==1.43.2",
    "pydantic==2.11.9",
    "pydantic-settings>=2.6.0",
    "python-dotenv==1.1.1",
    "tenacity==8.5.0",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.2",
    "email-validator>=2.2",
    "aiosqlite>=0.20",
    "pypdf>=5.1",
    "python-docx>=1.1",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "pytest==8.3.0",
    "pytest-asyncio==0.25.0",
    "ruff>=0.7.4",
    "pre-commit>=4.0.0",
    "reportlab>=4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interview_coach", "ui"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "ui", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.uv]
package = true
